--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,8 @@
     <string name="confirm">확인</string>
     <string name="cancel">취소</string>
     <string name="play">자동 재생</string>
+    <string name="send">전송</string>
+    <string name="placeholder">채팅을 입력해주세요.</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
